--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,15 @@
 <resources>
     <string name="app_name">Chip 퀴즈</string>
     <string name="findPassword"><u>비밀번호 찾기</u></string>
+
+    <string-array name="category_array">
+        <item>전체</item>
+        <item>역사</item>
+        <item>경제</item>
+        <item>시사</item>
+        <item>인물</item>
+        <item>넌센스</item>
+        <item>영어</item>
+        <item>우리말</item>
+    </string-array>
 </resources>
