퀴즈 등록시 토스트 메시지 표기 기능 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,6 @@
         <item>우리말</item>
     </string-array>
 
-    <item type="id" name="quizType" />
-    <item type="id" name="quizName" />
+    <item name="quizType" type="id" />
+    <item name="quizName" type="id" />
 </resources>
